// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`voiceStress renders 0 1`] = `
Array [
  .c0 {
  voice-stress: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceStress renders function 1`] = `
Array [
  .c0 {
  voice-stress: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: has;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: has;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceStress renders invalid theme path 1`] = `
Array [
  .c0 {
  voice-stress: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceStress renders negative number 1`] = `
Array [
  .c0 {
  voice-stress: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceStress renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  voice-stress: July;
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-stress: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: July;
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-stress: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-stress: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-stress: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceStress renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    voice-stress: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-stress: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    voice-stress: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-stress: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-stress: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-stress: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-stress: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceStress renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  voice-stress: July;
}

@media May {
  .c0 {
    voice-stress: August;
  }
}

@media April {
  .c0 {
    voice-stress: September;
  }
}

@media January {
  .c0 {
    voice-stress: November;
  }
}

@media April {
  .c0 {
    voice-stress: August;
  }
}

@media June {
  .c0 {
    voice-stress: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: July;
}

@media May {
  .c0 {
    voice-stress: August;
  }
}

@media April {
  .c0 {
    voice-stress: September;
  }
}

@media January {
  .c0 {
    voice-stress: November;
  }
}

@media April {
  .c0 {
    voice-stress: August;
  }
}

@media June {
  .c0 {
    voice-stress: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-stress: November;
  }
}

@media April {
  .c0 {
    voice-stress: January;
  }
}

@media January {
  .c0 {
    voice-stress: December;
  }
}

@media April {
  .c0 {
    voice-stress: April;
  }
}

@media June {
  .c0 {
    voice-stress: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-stress: November;
  }
}

@media April {
  .c0 {
    voice-stress: January;
  }
}

@media January {
  .c0 {
    voice-stress: December;
  }
}

@media April {
  .c0 {
    voice-stress: April;
  }
}

@media June {
  .c0 {
    voice-stress: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceStress renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    voice-stress: July;
  }
}

@media April {
  .c0 {
    voice-stress: August;
  }
}

@media January {
  .c0 {
    voice-stress: September;
  }
}

@media April {
  .c0 {
    voice-stress: November;
  }
}

@media June {
  .c0 {
    voice-stress: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    voice-stress: July;
  }
}

@media April {
  .c0 {
    voice-stress: August;
  }
}

@media January {
  .c0 {
    voice-stress: September;
  }
}

@media April {
  .c0 {
    voice-stress: November;
  }
}

@media June {
  .c0 {
    voice-stress: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-stress: January;
  }
}

@media April {
  .c0 {
    voice-stress: December;
  }
}

@media January {
  .c0 {
    voice-stress: April;
  }
}

@media April {
  .c0 {
    voice-stress: May;
  }
}

@media June {
  .c0 {
    voice-stress: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-stress: January;
  }
}

@media April {
  .c0 {
    voice-stress: December;
  }
}

@media January {
  .c0 {
    voice-stress: April;
  }
}

@media April {
  .c0 {
    voice-stress: May;
  }
}

@media June {
  .c0 {
    voice-stress: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceStress renders postitive number 1`] = `
Array [
  .c0 {
  voice-stress: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceStress renders string 1`] = `
Array [
  .c0 {
  voice-stress: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: June;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: June;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceStress renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`voiceStress renders valid theme path 1`] = `
Array [
  .c0 {
  voice-stress: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-stress: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
